fix: changed title + homepage URL

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site where you can create your own carousel simply and fast. Check this out!"
+      content="Web site where you can create your own carousel simply and fast. Try this out!"
     />
-    <title>Carousel</title>
+    <title>Create your own carousel!</title>
   </head>
   <body>
     <div id="root"></div>
